--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventTicketsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventTicketsContent.cshtml
@@ -27,39 +27,41 @@
     }
 }
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Member</th>
-            <th>Paid</th>
-        </tr>
-    </thead>
-    <tbody> 
-        @foreach (var ticketPurchase in Model.Purchases.OrderBy(x => x.Member.FullName))
-        {
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
             <tr>
-                <td width="30px" class="px-0">
-                    @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
-                    {
-                        ChapterName = Model.Chapter.Name,
-                        Member = ticketPurchase.Member,
-                        MaxWidth = 30
-                    })
-                </td>
-                <td>
-                    <a href="/@Model.Chapter.Name/Admin/Members/@ticketPurchase.MemberId">@ticketPurchase.Member.FullName</a>
-                </td>
-                <td>
-                    @Model.PaymentSettings.Currency.ToAmountString(ticketPurchase.TotalPaid)
-
-                    @if (ticketPurchase.TotalPaid < Model.Event.TicketSettings.Cost)
-                    {
-                        var remaining = Model.Event.TicketSettings.Cost - ticketPurchase.TotalPaid;
-                        @:(Remaining: @Model.PaymentSettings.Currency.ToAmountString(remaining))
-                    }
-                </td>
+                <th></th>
+                <th>Member</th>
+                <th>Paid</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody> 
+            @foreach (var ticketPurchase in Model.Purchases.OrderBy(x => x.Member.FullName))
+            {
+                <tr>
+                    <td width="30px" class="px-0">
+                        @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
+                        {
+                            ChapterName = Model.Chapter.Name,
+                            Member = ticketPurchase.Member,
+                            MaxWidth = 30
+                        })
+                    </td>
+                    <td>
+                        <a href="/@Model.Chapter.Name/Admin/Members/@ticketPurchase.MemberId">@ticketPurchase.Member.FullName</a>
+                    </td>
+                    <td>
+                        @Model.PaymentSettings.Currency.ToAmountString(ticketPurchase.TotalPaid)
+
+                        @if (ticketPurchase.TotalPaid < Model.Event.TicketSettings.Cost)
+                        {
+                            var remaining = Model.Event.TicketSettings.Cost - ticketPurchase.TotalPaid;
+                            @:(Remaining: @Model.PaymentSettings.Currency.ToAmountString(remaining))
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
