--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
@@ -77,71 +77,73 @@
     </div>
 </p>
 
-<table class="table" data-sortable id="members-table" data-table-striped>
-    <thead>
-    <tr>
-        <th></th>
-        <th data-sortable-sort="default">Name</th>
-        <th data-sortable-sort>Type</th>
-        <th data-sortable-sort>Expires</th>
-        <th data-sortable-sort>Status</th>
-        <th>Emails</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var member in members)
-    {
-        subscriptionDictionary.TryGetValue(member.Id, out var subscription);
-        var status = AuthorizationService.GetSubscriptionStatus(member, subscription, Model.MembershipSettings);
-
-        <tr data-filter-name="@member.FullName" 
-            data-filter-type="@(subscription?.Type ?? SubscriptionType.Full)"
-            data-filter-status="@status">
-            <td width="30px" class="px-0">
-                @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
-                {
-                    ChapterName = Model.Chapter.Name,
-                    Member = member,
-                    MaxWidth = 30
-                })
-            </td>
-            <td>
-                <a href="@OdkRoutes2.MemberGroups.Member(Model.Platform, Model.Chapter, member.Id)" data-sort-value="@member.FullName">
-                    @member.GetDisplayName(Model.Chapter.Id)
-                </a>
-            </td>
-            <td>@(subscription?.Type ?? SubscriptionType.Full)</td>
-            <td>
-                <span class="d-none" data-sort-value="@(subscription?.ExpiresUtc?.ToString("yyyy-MM-dd") ?? "")"></span>
-                <span class="@(subscription?.ExpiresUtc < DateTime.Today ? "text-danger" : null)
-                             @(subscription?.ExpiresUtc < subscriptionWarningDate ? "text-warning" : null)">
-                    @subscription?.ExpiresUtc?.ToString("yyyy-MM-dd")
-                </span>
-            </td>
-            <td>@status</td>
-            <td>
-                @if (member.EmailOptIn)
-                {
-                    <i class="fas fa-check-circle text-success"></i>
-                }
-                else
-                {
-                    <i class="fas fa-times-circle text-danger"></i>
-                }
-            </td>
-            <td>
-                @if (!member.Activated)
-                {
-                    <form method="post" action="/groups/@Model.Chapter.Id/members/@member.Id/emails/activation/send">
-                        <button data-bs-toggle="tooltip" data-bs-title="Re-send activation email"
-                                class="btn-icon text-primary">
-                            <i class="fas fa-envelope-square"></i>
-                        </button>
-                    </form>
-                }
-            </td>
+<div class="table-responsive">
+    <table class="table" data-sortable id="members-table" data-table-striped>
+        <thead>
+        <tr>
+            <th></th>
+            <th data-sortable-sort="default">Name</th>
+            <th data-sortable-sort>Type</th>
+            <th data-sortable-sort>Expires</th>
+            <th data-sortable-sort>Status</th>
+            <th>Emails</th>
+            <th></th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var member in members)
+        {
+            subscriptionDictionary.TryGetValue(member.Id, out var subscription);
+            var status = AuthorizationService.GetSubscriptionStatus(member, subscription, Model.MembershipSettings);
+
+            <tr data-filter-name="@member.FullName" 
+                data-filter-type="@(subscription?.Type ?? SubscriptionType.Full)"
+                data-filter-status="@status">
+                <td width="30px" class="px-0">
+                    @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
+                    {
+                        ChapterName = Model.Chapter.Name,
+                        Member = member,
+                        MaxWidth = 30
+                    })
+                </td>
+                <td>
+                    <a href="@OdkRoutes2.MemberGroups.Member(Model.Platform, Model.Chapter, member.Id)" data-sort-value="@member.FullName">
+                        @member.GetDisplayName(Model.Chapter.Id)
+                    </a>
+                </td>
+                <td>@(subscription?.Type ?? SubscriptionType.Full)</td>
+                <td>
+                    <span class="d-none" data-sort-value="@(subscription?.ExpiresUtc?.ToString("yyyy-MM-dd") ?? "")"></span>
+                    <span class="@(subscription?.ExpiresUtc < DateTime.Today ? "text-danger" : null)
+                                 @(subscription?.ExpiresUtc < subscriptionWarningDate ? "text-warning" : null)">
+                        @subscription?.ExpiresUtc?.ToString("yyyy-MM-dd")
+                    </span>
+                </td>
+                <td>@status</td>
+                <td>
+                    @if (member.EmailOptIn)
+                    {
+                        <i class="fas fa-check-circle text-success"></i>
+                    }
+                    else
+                    {
+                        <i class="fas fa-times-circle text-danger"></i>
+                    }
+                </td>
+                <td>
+                    @if (!member.Activated)
+                    {
+                        <form method="post" action="/groups/@Model.Chapter.Id/members/@member.Id/emails/activation/send">
+                            <button data-bs-toggle="tooltip" data-bs-title="Re-send activation email"
+                                    class="btn-icon text-primary">
+                                <i class="fas fa-envelope-square"></i>
+                            </button>
+                        </form>
+                    }
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
