--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueEventsContent.cshtml
@@ -38,22 +38,24 @@
     </a>
 </p>
 
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Date</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var @event in Model.Events.OrderByDescending(x => x.Date))
-    {
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
         <tr>
-            <td>
-                <a href="@OdkRoutes2.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a>
-            </td>
-            <td>@(@event.Date.EventDate())</td>
+            <th>Name</th>
+            <th>Date</th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var @event in Model.Events.OrderByDescending(x => x.Date))
+        {
+            <tr>
+                <td>
+                    <a href="@OdkRoutes2.MemberGroups.Event(Model.Platform, Model.Chapter, @event.Id)">@(@event.GetDisplayName())</a>
+                </td>
+                <td>@(@event.Date.EventDate())</td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
