--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChaptersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ChaptersContent.cshtml
@@ -4,37 +4,39 @@
 <section class="section--admin">
     <h3>Pending approval</h3>
     
-    <table class="table table--striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Created</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var chapter in Model.PendingApproval)
-            {
+    <div class="table-responsive">
+        <table class="table table--striped">
+            <thead>
                 <tr>
-                    <td>@chapter.Name</td>
-                    <td>@chapter.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                    <td>
-                        <div class="button-container">
-                            <form action="/superadmin/groups/@chapter.Id/approve" method="post">
-                                @Html.AntiForgeryToken()
-                                <button class="btn btn-success btn-sm">Approve</button>
-                            </form>
-                            <form action="/superadmin/groups/@chapter.Id/delete" method="post">
-                                @Html.AntiForgeryToken()
-                                <button class="btn btn-danger btn-sm" 
-                                    onclick="return confirm('Are you sure you want to delete this group?');">
-                                    Delete
-                                </button>
-                            </form>
-                        </div>
-                    </td>
+                    <th>Name</th>
+                    <th>Created</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>    
+            </thead>
+            <tbody>
+                @foreach (var chapter in Model.PendingApproval)
+                {
+                    <tr>
+                        <td>@chapter.Name</td>
+                        <td>@chapter.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                        <td>
+                            <div class="button-container">
+                                <form action="/superadmin/groups/@chapter.Id/approve" method="post">
+                                    @Html.AntiForgeryToken()
+                                    <button class="btn btn-success btn-sm">Approve</button>
+                                </form>
+                                <form action="/superadmin/groups/@chapter.Id/delete" method="post">
+                                    @Html.AntiForgeryToken()
+                                    <button class="btn btn-danger btn-sm" 
+                                        onclick="return confirm('Are you sure you want to delete this group?');">
+                                        Delete
+                                    </button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>    
+    </div>
 </section>
