--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorContent.cshtml
@@ -9,37 +9,39 @@
     var (error, properties) = (Model.Error.Error, Model.Error.Properties);
 }
 
-<table class="table table-striped">
-    <tbody>
-        <tr>
-            <td>Time</td>
-            <td>@error.CreatedUtc.ToString("dd/MM/yyyy HH:mm:ss")</td>
-        </tr>
-        <tr>
-            <td>Message</td>
-            <td>@error.ExceptionMessage</td>
-        </tr>
-
-        @foreach (var property in properties)
-        {
+<div class="table-responsive">
+    <table class="table table-striped">
+        <tbody>
             <tr>
-                <td>@property.Name</td>
-                <td>
-                    @if (property.Name.Equals("EXCEPTION.STACKTRACE"))
-                    {
-                        <span>
-                            @Html.Raw(property.Value.Replace(Environment.NewLine, "<br/>"))
-                        </span>
-                    }                    
-                    else
-                    {
-                        @property.Value
-                    }
-                </td>
+                <td>Time</td>
+                <td>@error.CreatedUtc.ToString("dd/MM/yyyy HH:mm:ss")</td>
             </tr>
-        }
-    </tbody>
-</table>
+            <tr>
+                <td>Message</td>
+                <td>@error.ExceptionMessage</td>
+            </tr>
+
+            @foreach (var property in properties)
+            {
+                <tr>
+                    <td>@property.Name</td>
+                    <td>
+                        @if (property.Name.Equals("EXCEPTION.STACKTRACE"))
+                        {
+                            <span>
+                                @Html.Raw(property.Value.Replace(Environment.NewLine, "<br/>"))
+                            </span>
+                        }                    
+                        else
+                        {
+                            @property.Value
+                        }
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
 @* 
 @if (similar.Count > 0)
@@ -49,19 +51,21 @@
         @Html.AntiForgeryToken()
         <button class="btn btn-danger">Delete all</button>
     </form>
-    <table class="table table-striped">
-        <thead>
-        <tr><th>Date</th></tr>
-        </thead>
-        <tbody>
-        @foreach (LogMessage error in similar.OrderByDescending(x => x.TimeStamp))
-        {
-            <tr>
-                <td>
-                    @error.TimeStamp.ToString("dd/MM/yyyy HH:mm:ss")
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr><th>Date</th></tr>
+            </thead>
+            <tbody>
+            @foreach (LogMessage error in similar.OrderByDescending(x => x.TimeStamp))
+            {
+                <tr>
+                    <td>
+                        @error.TimeStamp.ToString("dd/MM/yyyy HH:mm:ss")
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
 } *@
