--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -15,31 +15,34 @@
         Create
     </a>
 </p>
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Added</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var feature in features)
-    {
+
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
         <tr>
-            <td>
-                <a href="/SuperAdmin/Features/@feature.Id">@feature.Name</a>
-            </td>
-            <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
-            <td>
-                <form action="/SuperAdmin/Features/@feature.Id/Delete" method="post">
-                    @Html.AntiForgeryToken()
-                    <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
-                            <i class="fas fa-times"></i>
-                    </button>
-                </form>
-            </td>
+            <th>Name</th>
+            <th>Added</th>
+            <th></th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var feature in features)
+        {
+            <tr>
+                <td>
+                    <a href="/SuperAdmin/Features/@feature.Id">@feature.Name</a>
+                </td>
+                <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
+                <td>
+                    <form action="/SuperAdmin/Features/@feature.Id/Delete" method="post">
+                        @Html.AntiForgeryToken()
+                        <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
+                                <i class="fas fa-times"></i>
+                        </button>
+                    </form>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
