--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
@@ -29,39 +29,41 @@
 
 <section class="section--admin">
     <h2>Prices</h2>
-    <table class="table table--striped">
-        <thead>
-            <tr>
-                <th>Currency</th>
-                <th>Frequency</th>
-                <th>Amount</th>
-                <th>External Id</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var price in Model.Prices.OrderBy(x => x.Amount))
-            {
-                var currency = currencyDictionary[price.CurrencyId];
-
+    <div class="table-responsive">
+        <table class="table table--striped">
+            <thead>
                 <tr>
-                    <td>@currency.Code</td>
-                    <td>@price.Frequency.ToString()</td>
-                    <td>@currency.ToAmountString(price.Amount)</td>
-                    <td>@price.ExternalId</td>
-                    <td>
-                        <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices/@price.Id/Delete" method="post">
-                            @Html.AntiForgeryToken()
-                            <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
-                                    onclick="return confirm('Are you sure you want to delete this price?');">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </form>
-                    </td>
+                    <th>Currency</th>
+                    <th>Frequency</th>
+                    <th>Amount</th>
+                    <th>External Id</th>
+                    <th></th>
                 </tr>
-            }            
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var price in Model.Prices.OrderBy(x => x.Amount))
+                {
+                    var currency = currencyDictionary[price.CurrencyId];
+
+                    <tr>
+                        <td>@currency.Code</td>
+                        <td>@price.Frequency.ToString()</td>
+                        <td>@currency.ToAmountString(price.Amount)</td>
+                        <td>@price.ExternalId</td>
+                        <td>
+                            <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices/@price.Id/Delete" method="post">
+                                @Html.AntiForgeryToken()
+                                <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
+                                        onclick="return confirm('Are you sure you want to delete this price?');">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </form>
+                        </td>
+                    </tr>
+                }            
+            </tbody>
+        </table>
+    </div>
     <div class="mt-3">
         <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices" method="post">
             @Html.AntiForgeryToken()
