--- a/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventsContent.cshtml
@@ -19,6 +19,7 @@
     {
         Chapter = Model.Chapter,
         Events = Model.Events,
+        FullWidth = true,
         Platform = Model.Platform,
         TimeZone = Model.Chapter.TimeZone ?? TimeZoneInfo.FindSystemTimeZoneById(Chapter.DefaultTimeZoneId)
     })
