--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -23,7 +23,7 @@
                 </a>
                 <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Index(platform)">
                     <span class="icon">
-                        <i class="fa-solid fa-users-rectangle"></i>
+                        @await Html.PartialAsync("Components/Icons/_Groups")
                     </span>                    
                     <span>My groups</span>
                 </a>
