--- a/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventList.cshtml
@@ -1,18 +1,19 @@
 ﻿@using ODK.Services.Events
 @using ODK.Web.Razor.Models.Events
 @model EventListViewModel
-@{
-    var events = Model.Events.OrderBy(x => x.Date);
-}
-@foreach (var @event in events)
-{
-    <div class="list-item">
-        @await Html.PartialAsync("Events/_ListEvent", new ListEventViewModel
-        {
-            Chapter = Model.Chapter,
-            Event = @event,
-            Platform = Model.Platform,
-            TimeZone = Model.TimeZone
-        })
-    </div>
-}
+
+<div class="row">
+    @foreach (var @event in Model.Events)
+    {
+        <div class="col-12 mb-3 @(Model.FullWidth ? null : "col-md-4")">
+            @await Html.PartialAsync("Events/_ListEvent", new ListEventViewModel
+            {
+                Chapter = Model.Chapter,
+                Event = @event,
+                ForceDisplayYear = Model.ForceDisplayYear,
+                Platform = Model.Platform,
+                TimeZone = Model.TimeZone
+            })
+        </div>
+    }
+</div>
