--- a/ODK.Web.Razor/Pages/Groups/Group.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Group.cshtml
@@ -14,6 +14,6 @@
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
 {
     Title = "",
-    Content = await Html.PartialAsync("Groups/_GroupContent", viewModel),
+    Content = await Html.PartialAsync("Groups/Home/_GroupContent", viewModel),
     Group = viewModel
 })
