--- a/ODK.Web.Razor/wwwroot/css/_sidebar.scss
+++ b/ODK.Web.Razor/wwwroot/css/_sidebar.scss
@@ -1,3 +1,9 @@
+.sidebar--cards {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
 .sidebar-card {
     margin-bottom: 1rem;
 }
